Last fixes before peer review

--- a/docs/thesis/abstract.tex
+++ b/docs/thesis/abstract.tex
@@ -25,7 +25,7 @@
 \fi
 
 	In payment channel network, such as the lightning network, the routing
-	nodes receives a fee as compensation for displaced liquidity and operational
+	nodes receives a fee as compensation for displaced liquidity, time value of money and operational
 	costs. Currently this fee is mostly manually set procuring an unoptimized profit to
 	the node operator. TODO: TYPES OF POLICIES HERE, NOT ONLT PRICE BIT PREFERENTIAL ATTACHMENT, RECEIVED CHANNELS
 	AND OPTIMAL STRATEGY AS PRODUCT OF OTHERS STRATEGIES; HENCE GAME THEORY. 
