--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -496,7 +496,7 @@ TOR, reverse govern-print mention
 
 @misc{bip:0101:increase:block:size,
 	author = { Andersen, Gavin},
-	title = "BIP 0101 Increase maximum block size"
+	title = "BIP 0101 Increase maximum block size",
 	year = "2015",
 	month = "June",
 	day = "22",
@@ -636,9 +636,10 @@ year = "",
 
 % Topology
 
+% Albert-Lászlo Réka
 @article{
 	barabasi:albert:emergent:scaling,
-	author = {Barabasi, Albert-Lászlo and Albert, Réka},
+	author = {Barabasi, Albert-Laszlo and Albert, Reka}, 
 	title = "Emergence of Scaling in Random Networks",
 	journal = "Science",
 	volume =  "286",
